make the nav button on mobile fixed

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -199,6 +199,7 @@ footer {
 button.navbar-toggler {
   margin-bottom: -4rem;
   background-color: white;
+  position: fixed;
 }
 
 .main-content.card {
